<resources>

    <string name="com_parse_ui_logo_content_description">Logo</string>
    <string name="com_parse_ui_progress_dialog_text">Loading...</string>

    <string name="com_parse_ui_username_input_hint_mm">အမည္</string>
    <string name="com_parse_ui_password_input_hint_mm">လွ်ိဳ ့၀ွက္ စာလံုုး</string>
    <string name="com_parse_ui_parse_login_button_label_mm">၀င္ရန္</string>
    <string name="com_parse_ui_parse_signup_button_label_mm">အေကာင့္ အသစ္ၿပဳလုုပ္ရန္</string>
    <string name="com_parse_ui_confirm_password_input_hint_mm">လွ်ိဳ ့၀ွက္ စာလံုုးေနာက္တစ္ၾကိမ္ၿပန္ရိုုက္ပါ</string>

    <string name="com_parse_ui_forgot_password_button_mm"><u>လွ်ိဳ ့၀ွက္ စာလံုုးေမ ့ေနပါသလား</u></string>
    <string name="com_parse_ui_ph_input_hint_mm">ဖုုန္းနံပါတ္</string>
    <string name="com_parse_ui_create_account_button_label_mm">၀င္မည္</string>
    <string name="com_parse_ui_edit_account_button_label_mm">ၿပင္ဆင္မည္</string>
    <string name="com_parse_ui_parse_signup_img_upload_label_mm">ပံုုတင္ရန္</string>

    <string name="com_parse_ui_show_pwd_mm">လွ်ိဳ ့၀ွက္ စာလံုုးစစ္ေဆး ၾကည္ ့မည္။</string>
    <string name="com_parse_ui_show_pwd_eng">Show Password</string>


    <string name="com_parse_ui_username_input_hint">Username</string>
    <string name="com_parse_ui_password_input_hint">Password</string>
    <string name="com_parse_ui_forgot_password_button_label"><u>Forgot password</u></string>
    <string name="com_parse_ui_parse_signup_img_upload_label_eng">Upload Image or Avator</string>

    <string name="com_parse_ui_parse_login_button_label">LOG IN</string>
    <string name="com_parse_ui_parse_signup_button_label">CREATE ACCOUNT</string>
    <string name="com_parse_ui_facebook_login_button_label">Log in with Facebook</string>
    <string name="com_parse_ui_twitter_login_button_label">Log in with Twitter</string>
    <string name="com_parse_ui_email_input_hint">Email</string>
    <string name="com_parse_ui_confirm_password_input_hint">Re-enter password</string>
    <string name="com_parse_ui_name_input_hint">Name</string>
    <string name="com_parse_ui_create_account_button_label">Create account</string>
    <string name="com_parse_ui_edit_account_button_label">Edit account</string>
    <string name="com_parse_ui_ph_input_hint">Phone</string>

    <string name="com_parse_ui_create_account_button_label_eng">REGISTER</string>
    <string name="com_parse_ui_edit_account_button_label_eng">EDIT INFORMATION</string>


    <string name="com_parse_ui_no_username_toast">Please enter your username</string>
    <string name="com_parse_ui_no_password_toast">Please enter your password</string>
    <string name="com_parse_ui_no_ph_toast">Please enter your phone no</string>
    <string name="com_parse_ui_no_nrc_toast">Please enter your NRC no</string>
    <string name="com_parse_ui_no_address_toast">Please enter your Address</string>
    <string name="com_parse_ui_parse_login_invalid_credentials_toast">The username and password you entered don\'t match</string>
    <string name="com_parse_ui_parse_login_failed_unknown_toast">Could not log in, please try again later</string>

    <string name="open_internet_warning_eng">Please Open Internet Connection.</string>
    <string name="open_internet_warning_mm">အင္တာနက္ ခ်ိတ္ဆက္မွုုဖြင္ ့ရန္လိုုအပ္ပါသည္။</string>

    <string name="your_name_error_mm">အမည္ ရိုုက္ထည့္ရန္လိုုအပ္ပါသည္</string>
    <string name="password_error_mm">လွ်ိဳ ့၀ွက္ စာလံုုးရိုုက္ထည့္ရန္လိုုအပ္ပါသည္</string>
    <string name="confirm_password_error_mm">လွ်ိဳ ့၀ွက္ စာလံုုး ေနာက္တစ္ၾကိမ္ၿပန္ရိုုက္ထည့္ရန္လိုုအပ္ပါသည္</string>

    <string name="mobile_number_error_mm">ဖုုန္းနံပါတ္ ရိုုက္ထည့္ရန္လိုုအပ္ပါသည္</string>
    <string name="invalid_mobile_number_mm">ဖုုန္းနံပါတ္မွားေနပါသည္ ၿပန္လည္ၿပင္ဆင္ပါ။</string>

    <string name="your_name_error">Your name is required</string>
    <string name="password_error">Password is required</string>
    <string name="confirm_password_error">Confirm password is required</string>

    <string name="mobile_number_error">Mobile number is required</string>
    <string name="invalid_mobile_number">Mobile number is invalid</string>



    <string name="login_moto">Inspiration for Myanmar Women</string>

    <plurals name="com_parse_ui_password_too_short_toast_mm">
        <item quantity="one">လွ်ိဳ ့၀ွက္ စာလံုုး အေရအတြက္အနည္းဆံုုး  %d လံုုး ရွိရပါမည္။</item>
        <item quantity="other">လွ်ိဳ့ ၀ွက္ စာလံုုး အေရအတြက္ အမ်ားဆံုုး %d လံုုး ရွိရပါမည္။</item>
    </plurals>
    <plurals name="com_parse_ui_password_too_short_toast">
        <item quantity="one">Password must be at least %d character long</item>
        <item quantity="other">Password must be at least %d characters long</item>
    </plurals>

    <string name="com_parse_ui_username_taken_toast_mm">အမည္တူရွိေနပါသည္ အၿခားအမည္တစ္ခုုေရးပါ သိုု ့မဟုုတ္ အမည္ေနာက္တြင္နံပါတ္စဥ္တပ္နိုုင္သည္။</string>
    <string name="com_parse_ui_reenter_password_toast_mm">ေက်းဇူးၿပဳ ၍ လွ်ိဳ ့၀ွက္ စာလံုုးေနာက္တစ္ၾကိမ္ၿပန္ရိုုက္ပါ</string>
    <string name="com_parse_ui_mismatch_confirm_password_toast_mm">လွ်ိဳ ့၀ွက္ စာလံုုး မတူပါ ေနာက္တစ္ၾကိမ္ၿပန္ရိုုက္ပါ</string>
    <string name="com_parse_ui_mobile_number_mm">ဖုုန္းနံပါတ္ ရိုုက္ထည့္ပါ</string>
    <string name="com_parse_ui_invalid_mobile_number_mm">ဖုုန္းနံပါတ္မွားေနပါသည္ ၿပန္လည္ၿပင္ဆင္ပါ။</string>
    <string name="com_parse_ui_signup_failed_unknown_toast_mm">မွတ္ပံုုတင္အ ခ်က္အလက္ တစ္ခုုခုု မွားယြင္းေနသည္ေနာက္တစ္ၾကိမ္ၿပန္လည္စစ္ေဆး ၀င္ရန္ၾကိဳးစားပါ။</string>

    <string name="com_parse_ui_username_taken_toast">Username is already taken, please choose a different one</string>
    <string name="com_parse_ui_reenter_password_toast">Please re-enter your password</string>
    <string name="com_parse_ui_mismatch_confirm_password_toast">Passwords don\'t match, please try again</string>
    <string name="com_parse_ui_mobile_number">Please enter mobile number</string>
    <string name="com_parse_ui_invalid_mobile_number">Mobile number is invalid, please correct it and try again</string>
    <string name="com_parse_ui_signup_failed_unknown_toast">Could not sign up, please try again later</string>

    <string name="com_parse_ui_signup_township_lbl_eng">Choose Township</string>
    <string name="com_parse_ui_signup_township_lbl_mm">မိမိ TLG ၿမိဳ ့နယ္ေရြးပါ</string>
    <string name="ygn">ရန္ကုုန္</string>
    <string name="mdy">မႏ ၱေလး</string>
    <string name="npt">ေနၿပည္ေတာ္</string>

    <!-- Unnecessary-->
    <string name="nrc_number_helper">##/###(N)######</string>
    <string name="nrc_number_error">NRC number is required</string>
    <string name="invalid_nrc_number_error">NRC number is invalid. ##/###(N)######</string>
    <string name="passport_error">Passport number is required</string>
    <string name="invalid_passport_error">Passport number is invalid</string>
    <string name="email_address_error">Email address is required</string>
    <string name="com_parse_ui_facebook_login_failed_toast">Facebook login failed</string>
    <string name="com_parse_ui_twitter_login_failed_toast">Twitter login failed</string>

    <string name="com_parse_ui_no_email_toast">Please enter your email</string>
    <string name="com_parse_ui_invalid_email_toast">Email is invalid, please correct it and try again</string>
    <string name="com_parse_ui_email_taken_toast">Email is already taken, please reset your password instead</string>
    <string name="com_parse_ui_nrc_number">Please enter nrc number</string>
    <string name="com_parse_ui_passport_number">Please enter passport number</string>
    <string name="com_parse_ui_invalid_nrc_number">NRC number is invalid, please correct it and try again</string>
    <string name="com_parse_ui_invalid_passport_number">Passport number is invalid, please correct it and try again</string>
    <string name="com_parse_ui_no_name_toast">Please enter your name</string>
    <string name="com_parse_ui_login_help_instructions">Enter your email to recover your password</string>


    <string name="com_parse_ui_login_help_email_input_hint">Email</string>
    <string name="com_parse_ui_login_help_submit_button_label">Submit</string>
    <string name="com_parse_ui_login_help_login_again_button_label">Back to Login</string>
    <string name="com_parse_ui_login_help_submit_failed_unknown">Failed to request password reset, please try again</string>
    <string name="com_parse_ui_login_help_email_sent">Please check your email for instructions on how to access your account</string>

    <string name="com_parse_ui_login_warning_layout_missing_username_field">Layout missing username field</string>
    <string name="com_parse_ui_login_warning_layout_missing_password_field">Layout missing password field</string>
    <string name="com_parse_ui_login_warning_layout_missing_login_button">Layout missing login button</string>
    <string name="com_parse_ui_login_warning_layout_missing_signup_button">Layout missing signup button</string>
    <string name="com_parse_ui_login_warning_layout_missing_login_help_button">Layout missing login help button</string>
    <string name="com_parse_ui_login_warning_disabled_username_password_login">Disabled username/password login and signup because of missing layout elements</string>
    <string name="com_parse_ui_login_warning_disabled_facebook_login">Layout missing Facebook login button, disabled Facebook login</string>
    <string name="com_parse_ui_login_warning_disabled_twitter_login">Layout missing Twitter login button, disabled Twitter login</string>
    <string name="com_parse_ui_login_warning_parse_login_failed">"Parse username/password login failed, exception: "</string>

    <string name="com_parse_ui_login_warning_facebook_login_failed">"Facebook login failed, exception: "</string>
    <string name="com_parse_ui_login_warning_twitter_login_failed">"Twitter login failed, exception: "</string>
    <string name="com_parse_ui_login_warning_facebook_login_user_update_failed">"Updating user object after Facebook login failed, exception: "</string>
    <string name="com_parse_ui_login_warning_twitter_login_user_update_failed">"Updating user object after Twitter login failed, exception: "</string>
    <string name="com_parse_ui_login_warning_parse_signup_failed">"Parse signup failed, exception: "</string>
    <string name="com_parse_ui_login_warning_password_reset_failed">"Parse password reset failed, exception: "</string>

    <string name="com_parse_ui_login_dispatch_user_logged_in">"User logged in, starting: "</string>
    <string name="com_parse_ui_login_dispatch_user_not_logged_in">User not logged in, starting ParseLoginActivity</string>

    <string name="i_agree">I agree to all the <a href="https://www.facebook.com/UndpMyanmar">Terms and Conditions</a></string>
    <string name="i_agree_mm">မွတ္ပံုုတင္အခ်က္ အလက္မ်ားကိုုသေဘာတူပါသည္ <a href="https://www.facebook.com/UndpMyanmar"></a></string>

    <string name="signup_tlg_member_exit_mm">TLG (သိုု့) SRG အဖြဲ ့၀င္ၿဖစ္လ်င္အမွန္ၿခစ္ လုုပ္ပါ</string>
    <string name="signup_tlg_member_exit_eng">I am a TLG or SRG member</string>

    <string name="signup_tlg_township_choose_mm"> ၿမိဳ့နယ္တည္ေနရာေရြးခ်ယ္ပါ</string>
    <string name="signup_tlg_township_choose_eng">Choose Your Township</string>

    <string name="action_photo_camera">Take Photo</string>
    <string name="action_photo_gallery">Choose Existing</string>
    <string name="select_picture">Select Picture</string>

</resources>
