<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar_actionbar" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="false"
        tools:context="com.questmyanmar.gobus.ui.fragment.LoginFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="@dimen/com_parse_ui_vertical_margin"
            android:paddingLeft="@dimen/com_parse_ui_horizontal_margin"
            android:paddingRight="@dimen/com_parse_ui_horizontal_margin"
            android:paddingTop="@dimen/com_parse_ui_vertical_margin">

            <FrameLayout
                android:id="@+id/register_ly"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_below="@+id/facebook_login_container"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:layout_gravity="center">

                <com.makeramen.RoundedImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/register_profilePic_rounded"
                    android:layout_width="@dimen/feed_item_profile_pic"
                    android:layout_height="@dimen/feed_item_profile_pic"
                    android:layout_alignParentLeft="true"

                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"

                    android:layout_gravity="center"

                    android:scaleType="fitXY"
                    android:src="@drawable/camera_icon"
                    android:visibility="visible"
                    app:riv_border_color="#333333"
                    app:riv_border_width="0dip"
                    app:riv_corner_radius="30dip"
                    app:riv_mutate_background="true"
                    app:riv_oval="true"></com.makeramen.RoundedImageView>
                <ProgressBar
                    android:id="@+id/register_profilePic_progressBar"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"

                    android:layout_gravity="center"
                    android:visibility="visible" />
            </FrameLayout>

            <TextView
                android:id="@+id/register_img_upload_textview"
                style="@style/Caption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/register_ly"
                android:layout_marginBottom="@dimen/abc_list_item_padding_horizontal_material"
                android:layout_marginTop="@dimen/abc_list_item_padding_horizontal_material"
                android:gravity="center"

                android:textColor="@color/body_text_3"
                android:visibility="visible"
                android:textSize="15sp" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_signup_user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/signup_username_input"
                    style="@style/ParseLoginUI.EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                     />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_signup_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/signup_password_input"
                    style="@style/ParseLoginUI.EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/com_parse_ui_small_vertical_spacing"
                    android:fontFamily="sans-serif"
                    android:inputType="textPassword"
                    android:nextFocusForward="@+id/signup_confirm_password_input"
                    android:selectAllOnFocus="true"
                    android:textSize="15sp"/>

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_signup_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/signup_confirm_password_input"
                    style="@style/ParseLoginUI.EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/com_parse_ui_small_vertical_spacing"
                    android:fontFamily="sans-serif"
                    android:inputType="textPassword"
                    android:selectAllOnFocus="true"
                    android:textSize="15sp"/>

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_signup_mobile_number_for_nrc_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/signup_mobile_number_for_nrc_input"
                    style="@style/ParseLoginUI.EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:inputType="phone"
                    android:nextFocusDown="@+id/singup_tlg_checkbox"
                    android:nextFocusForward="@+id/singup_tlg_checkbox"
                    android:selectAllOnFocus="true"
                    android:textSize="15sp"/>

            </android.support.design.widget.TextInputLayout>
            <!--<android.support.design.widget.TextInputLayout
                android:id="@+id/til_signup_mobile_number_for_nrc_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/signup_mobile_number_for_nrc_input"
                    style="@style/ParseLoginUI.EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"

                    android:nextFocusDown="@+id/singup_tlg_checkbox"
                    android:nextFocusForward="@+id/singup_tlg_checkbox"
                    android:inputType="phone"
                    android:hint="Phone"
                    android:selectAllOnFocus="true"
                    android:text=" " />

            </android.support.design.widget.TextInputLayout>-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"

                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/singup_tlg_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/singup_tlg_checkbox_textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:textSize="15sp"
                    android:fontFamily="sans-serif"
                    android:text="@string/signup_tlg_member_exit_mm" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:orientation="vertical">
                <TextView
                    android:id="@+id/signup_lbl_township"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/com_parse_ui_horizontal_margin"
                    android:paddingLeft="3dp"
                    android:fontFamily="sans-serif"
                    android:textSize="15sp"
                    android:paddingBottom="@dimen/com_parse_ui_horizontal_margin"
                    android:text="Township"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                    />

                <Spinner
                    android:id="@+id/signup_spn_township"
                    style="@style/Spinner.TownshipInfo"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:enabled="false"
                    android:fontFamily="sans-serif"
                    android:text="@string/com_parse_ui_signup_township_lbl_eng"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/i_agree_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/terms_and_conditions_textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:textSize="15sp"
                    android:fontFamily="sans-serif"
                    android:text="@string/i_agree_mm" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"

                android:paddingBottom="30dp"
                android:paddingTop="40dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/create_account"
                        style="@style/ParseLoginUI.Button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:text="@string/com_parse_ui_create_account_button_label_mm"
                        android:textSize="15sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/register_edit_account"
                        style="@style/ParseLoginUI.Button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:layout_marginLeft="16dp"
                        android:enabled="false"
                        android:text="@string/com_parse_ui_edit_account_button_label_mm"
                        android:textSize="15sp"/>
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>